--- a/about/server.html
+++ b/about/server.html
@@ -42,7 +42,7 @@
             <nav class="main_menu">
                 <ul class="main_menu_list">
                     <li class="main_menu_item">
-                        <a href="#">關於我們</a>
+                        <a href="#">產品服務</a>
                         <ul class="main_sec_menu_list">
                             <li class="main_sec_menu_item">
                                 <a href="../about/index.html">公司簡介</a>
