--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="description" />
+    <meta name="keywords" content="keywords_1,keywords_2" />
+
+    <!-- 社群 meta start -->
+    <meta property="og:site_name" content="og___網站名稱_about_index" />
+    <meta property="fb:app_id" content="fb___APP ID_about_index" />
+    <meta property="og:type" content="og___website_about_index" />
+    <meta property="og:title" content="og___網頁標題_about_index" />
+    <meta property="og:description" content="og___描述文案_about_index" />
+    <meta property="og:image" content="../images/994-200x300.jpg" />
+    <!-- 社群 meta end -->
+
     <title>amycytech</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/common.css">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
             w[l] = w[l] || []; w[l].push({
@@ -80,6 +95,8 @@
         <div class="container">
             <div class="col-12">
                 <h2>首頁</h2>
+                <p>ico、mate</p>
+                <hr>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
                     suscipit ullam sed sequi? Illum, cumque id blanditiis doloribus
