--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <meta property="og:type" content="og___website_about_index" />
     <meta property="og:title" content="og___網頁標題_about_index" />
     <meta property="og:description" content="og___描述文案_about_index" />
-    <meta property="og:image" content="../images/994-200x300.jpg" />
+    <meta property="og:image" content="./images/994-200x300.jpg" />
     <!-- 社群 meta end -->
 
     <title>amycytech</title>
 
+    <link rel="shortcut icon" href="./images/ico.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/common.css">
