--- a/about/index.html
+++ b/about/index.html
@@ -19,6 +19,8 @@
     <!-- 社群 meta end -->
 
     <title>amycytech</title>
+    
+    <link rel="shortcut icon" href="../images/ico.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/common.css">
