--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <meta name="keywords" content="keywords_1,keywords_2" />
 
     <!-- 社群 meta start -->
-    <meta property="og:site_name" content="og___網站名稱_about_index" />
-    <meta property="fb:app_id" content="fb___APP ID_about_index" />
-    <meta property="og:type" content="og___website_about_index" />
-    <meta property="og:title" content="og___網頁標題_about_index" />
-    <meta property="og:description" content="og___描述文案_about_index" />
-    <meta property="og:image" content="./images/994-200x300.jpg" />
+    <meta property="og:site_name" content="og___網站名稱" />
+    <meta property="fb:app_id" content="fb___APP ID" />
+    <meta property="og:type" content="og___website" />
+    <meta property="og:title" content="og___網頁標題" />
+    <meta property="og:description" content="og___描述文案" />
+    <meta property="og:image" content="https://amycytech.github.io/images/100-200x300.jpg" />
     <!-- 社群 meta end -->
 
     <title>amycytech</title>
