--- a/product/pro_2/list.html
+++ b/product/pro_2/list.html
@@ -5,6 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="description" />
+    <meta name="keywords" content="keywords_1,keywords_2" />
+
+    <!-- 社群 meta start -->
+    <meta property="og:title" content="og___網頁標題_pro1_list" />
+    <meta property="og:description" content="og___描述文案_pro2_list" />
+    <meta property="og:site_name" content="og___網站名稱" />
+    <meta property="fb:app_id" content="fb___APP ID" />
+    <meta property="og:type" content="og___website" />
+    <meta property="og:image" content="https://amycytech.github.io/images/1019-600x315.jpg" />
+    <!-- 社群 meta end -->
+
     <title>產品類別二_amycytech</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
@@ -81,6 +94,8 @@
             <div class="col-12">
                 <h2>產品類別二</h2>
                 <h3><a href="./more.html">詳細頁</a></h3>
+                <p>ico 、 meta</p>
+                <p>og:image   600*315</p>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
                     suscipit ullam sed sequi? Illum, cumque id blanditiis doloribus
