--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -5,6 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="description" />
+    <meta name="keywords" content="keywords_1,keywords_2" />
+
+    <!-- 社群 meta start -->
+    <meta property="og:title" content="og___網頁標題_sitemap" />
+    <meta property="og:description" content="og___描述文案_sitemap" />
+    <meta property="og:site_name" content="og___網站名稱" />
+    <meta property="fb:app_id" content="fb___APP ID" />
+    <meta property="og:type" content="og___website" />
+    <!-- https://picsum.photos/800/400 -->
+    <meta property="og:image" content="https://amycytech.github.io/images/126-800x400.jpg" />
+    <meta property="og:image" content="https://amycytech.github.io/images/996-800x400.jpg" />
+    <meta property="og:image" content="https://amycytech.github.io/images/955-800x400.jpg" />
+    <meta property="og:image" content="https://amycytech.github.io/images/1071-800x400.jpg" />
+    <meta property="og:image" content="https://amycytech.github.io/images/806-800x400.jpg" />
+    <!-- 社群 meta end -->
+
     <title>amycytech</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
