--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta property="og:title" content="og___網頁標題" />
     <meta property="og:description" content="og___描述文案" />
     <meta property="og:image" content="https://amycytech.github.io/images/100-200x300.jpg" />
+    <meta name="google-site-verification" content="6PKIEnzLdY6PaM1xHrjkFUFcUVcYDzpe9RDIfevVv60" />
     <!-- 社群 meta end -->
 
     <title>amycytech</title>
