--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <meta name="description" content="description" />
     <meta name="keywords" content="keywords_1,keywords_2" />
+    <meta name="google-site-verification" content="6PKIEnzLdY6PaM1xHrjkFUFcUVcYDzpe9RDIfevVv60" />
 
     <!-- 社群 meta start -->
     <meta property="og:site_name" content="og___網站名稱" />
