--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <h1 class="logo"><a href="#">logo</a></h1>
             <nav class="sec_menu">
                 <ul class="sec_menu_list">
+                    <a href="https://amycytech.github.io/cyTechWeb/index.html">官網</a>
                     <li class="sec_menu_item"><a href="./index.html">回首頁</a></li>
                     <li class="sec_menu_item"><a href="./sitemap/index.html">網站導覽</a></li>
                 </ul>
