--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                         <a href="#">關於我們</a>
                         <ul class="main_sec_menu_list">
                             <li class="main_sec_menu_item">
+                                <a href="https://amycytech.github.io/cyTechWeb/index.html">官網</a>
+                            </li>
+                            <li class="main_sec_menu_item">
                                 <a href="./about/index.html">公司簡介</a>
                             </li>
                             <li class="main_sec_menu_item">
