--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     <!-- End Google Tag Manager (noscript) -->
     <header class="header">
         <div class="container header_area1">
-            <h1 class="logo"><a href="#">logo</a></h1>
+            <h1 class="logo"><a href="#">logo</a>
+                <a href="./index.html">回首頁</a></h1>
             <nav class="sec_menu">
                 <ul class="sec_menu_list">
                     <a href="https://amycytech.github.io/cyTechWeb/index.html">官網</a>
